--- a/backend/configuration/config.env
+++ b/backend/configuration/config.env
@@ -1,3 +1,2 @@
-PORT=5000
-BASEURL=mongodb+srv://admin:admin@hackatonclustor.km9hf.mongodb.net/?retryWrites=true&w=majority
-
+PORT = 5000
+BASEURL = mongodb+srv://admin:admin@cluster0.oxtph36.mongodb.net/?retryWrites=true&w=majority
