--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "seeder": "node backend/utils/seeder.js"
   },
   "repository": {
     "type": "git",
